--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import-product": "node scripts/importData.mjs"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.2",
@@ -17,14 +18,27 @@
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.70.0",
+    "ai": "^4.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.1",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.468.0",
     "next": "14.2.2",
+    "next-sanity": "^9.8.39",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
+    "remark-gfm": "^4.0.0",
+    "remeda": "^2.19.2",
+    "sanity": "^3.70.0",
+    "shiki": "^2.1.0",
+    "sonner": "^1.7.2",
+    "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
