--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
     "ai": "^4.1.0",
@@ -33,6 +34,7 @@
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.3",
+    "react-redux": "^9.2.0",
     "remark-gfm": "^4.0.0",
     "remeda": "^2.19.2",
     "sanity": "^3.70.0",
@@ -46,6 +48,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-redux": "^7.1.34",
+    "@types/react-toastify": "^4.0.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
