--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "import-product": "node scripts/importData.mjs"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.10.3",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.2",
