--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "ai": "^4.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,6 +33,7 @@
     "next": "14.2.2",
     "next-sanity": "^9.8.39",
     "next-themes": "^0.4.4",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
@@ -47,6 +50,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-redux": "^7.1.34",
